tests/src/frontend/typechecking/invalid/frozen_tparam_expr_dot_1.sk
fun no<T: mutable Ref<mutable Array<Int>>>(x: T): mutable Array<Int> {
  freeze(x).value
}
